# wc3extender

./: README.md
wc3sys/: Cargo.toml
wc3sys/scripts/: main - copia (2).lua  main - copia.lua  main.lua  main.lua.bak_fix_old_visuals_20260605_142654  main.lua.bak_status_slow  main.lua.bak_visual_picker_20260605_141854  war3map.lua
wc3sys/src/: addresses.rs  bootstrap.rs  c_abi.rs  error.rs  hooks.rs  lib.rs  logging.rs  paths.rs
wc3sys/src/archives/: bootstrap.rs  exports.rs  hooks.rs  mod.rs  mount.rs  queue.rs  raw.rs  read.rs
wc3sys/src/debug/: mod.rs
wc3sys/src/engines/: debug.rs  exports.rs  handlers.rs  manager.rs  mod.rs  natives.rs
wc3sys/src/engines/lua/: callbacks.rs  compat_scripts.rs  dev_script.rs  engine.rs  invoke.rs  marshal.rs  mod.rs  native_bindings.rs  runtime.rs  sig.rs
wc3sys/src/game/: mod.rs  raw.rs
wc3sys/src/jass/: custom_triggers.rs  exports.rs  hooks.rs  mod.rs  raw.rs
wc3sys/src/lifecycle/: handlers.rs  manager.rs  mod.rs  phase.rs
wc3sys/src/natives/: conversions.rs  mod.rs
wc3sys/src/natives/buffs/: natives.rs
wc3sys/src/natives/frames/: events.rs  frame_registry.rs  frame_type.rs  hooks.rs  mod.rs  natives.rs  offsets.rs  ops.rs  structs.rs  trigger_events.rs  types.rs
wc3sys/src/natives/mouse/: mod.rs  natives.rs
wc3sys/src/natives/spells/: cability.rs  cbuff.rs  cbuff_generated.rs  hooks.rs  mod.rs  natives.rs
wc3sys/src/natives/status/: mod.rs  natives.rs
wc3sys/src/plugins/: exports.rs  loader.rs  mod.rs  registry.rs
wc3sys/src/ui/: exports.rs  hooks.rs  mod.rs
wc3sys/src/ui/events/: mod.rs
(+33 files in other folders)
