[package]
name = "wc3sys"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11.6", features = ["luajit", "vendored", "send"] }
wc3 = { path = "../wc3" }

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
]

[lib]
crate-type = ["cdylib"]
