[package]
name = "wc3sys"
version = "0.1.0"
edition = "2024"


[features]
default = ["log-mpq-mounting", "log-native-registration"]
log-frame-events = []
log-native-registration = []
log-mpq-mounting = []
log-invoke-code = []

[dependencies]
mlua = { version = "0.11.6", features = ["lua53", "vendored", "send"] }
wc3 = { path = "../wc3" }

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
	"Win32_System_Console",
]

[lib]
crate-type = ["cdylib"]
[build]
rustflags = ["-A", "warnings"]
